# PhaseVel

./: .gitignore  CMakeLists.txt  README.md  run_phase.sh
LSinversion/: run_phase.sh
include/: parameters.h
kernels/: CMakeLists.txt  README.md
kernels/src/: eigcon.f  eigcon_subs.f  eigen2asc.f  kernel_kappa.f  kernelfunctions.f  kernels.f  minos_bran.f  minos_start.f  minosbran_subs.f  plot_kernels.py
src/: Makefile  PxMCMC-simple.py  PxMCMC.py  all_kernels.f  buildA.f  checkerboard.py  eigcon.f  eigen2asc.f  forward_modelling.f  kernelfunctions.f  kernels.f  main.f  minos_bran.f  readA.f  test_PxMCMC.py  test_utils.py  utils.py  ylmpav.f
